--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@notifee/react-native": "^7.8.0",
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/datetimepicker": "^8.4.2",
     "@react-native-community/slider": "^4.5.5",
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-firebase/app": "^22.2.0",
